--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -52,18 +52,25 @@
                     <th>Actions</th>
                 </tr>
             </thead>
-            <tbody>
-                {% for transaction in transactions %}
-                <tr>
-                    <td>{{ transaction.date }}</td>
-                    <td>{{ transaction.amount }}</td>
-                    <td class="transaction-actions">
-                        <a class="btn btn-sm btn-primary" href="{{ url_for('edit_transaction', transaction_id=transaction.id) }}">Edit</a>
-                        <a class="btn btn-sm btn-danger" href="{{ url_for('delete_transaction', transaction_id=transaction.id) }}">Delete</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
+          <tbody>
+    {% for transaction in transactions %}
+    <tr>
+        <td>{{ transaction.date }}</td>
+        <td>{{ transaction.amount }}</td>
+        <td class="transaction-actions">
+            <a class="btn btn-sm btn-primary" href="{{ url_for('edit_transaction', transaction_id=transaction.id) }}">Edit</a>
+            <a class="btn btn-sm btn-danger" href="{{ url_for('delete_transaction', transaction_id=transaction.id) }}">Delete</a>
+        </td>
+    </tr>
+    {% endfor %}
+
+    <!-- TOTAL ROW outside the loop -->
+    <tr>
+        <td><strong>Total</strong></td>
+        <td><strong>{{ total_amount }}</strong></td>
+        <td></td>
+    </tr>
+</tbody>
         </table>
 
         <div class="d-flex justify-content-center">
