--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -58,8 +58,8 @@
         <td>{{ transaction.date }}</td>
         <td>{{ transaction.amount }}</td>
         <td class="transaction-actions">
-            <a class="btn btn-sm btn-primary" href="{{ url_for('edit_transaction', transaction_id=transaction.id) }}">Edit</a>
-            <a class="btn btn-sm btn-danger" href="{{ url_for('delete_transaction', transaction_id=transaction.id) }}">Delete</a>
+            <a class="btn btn-sm btn-primary" href="{{ url_for('main.edit_transaction', transaction_id=transaction.id) }}">Edit</a>
+            <a class="btn btn-sm btn-danger" href="{{ url_for('main.delete_transaction', transaction_id=transaction.id) }}">Delete</a>
         </td>
     </tr>
     {% endfor %}
@@ -74,7 +74,7 @@
         </table>
 
         <div class="d-flex justify-content-center">
-            <a class="btn btn-success" href="{{ url_for('add_transaction') }}">Add Transaction</a>
+            <a class="btn btn-success" href="{{ url_for('main.add_transaction') }}">Add Transaction</a>
         </div>
     </div>
 </body>
