--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <style>
         body {
             background: linear-gradient(to right, #f6d365, #fda085);
@@ -29,20 +30,41 @@
 <body>
     <div class="container">
         <h1 class="text-center">Edit Transaction</h1>
-        <form action="{{ url_for('main.edit_transaction', transaction_id=transaction.id) }}" method="POST">
+        <form action="{{ url_for('main.edit_transaction', transaction_id=transaction.id) }}"
+              method="POST">
             <div class="form-group">
                 <label for="date">Date:</label>
-                <input type="date" name="date" id="date" class="form-control" value="{{ transaction.date }}" required>
+                <input
+                    type="date"
+                    name="date"
+                    id="date"
+                    class="form-control"
+                    value="{{ transaction.date }}"
+                    required
+                >
             </div>
 
             <div class="form-group">
                 <label for="amount">Amount:</label>
-                <input type="number" name="amount" id="amount" class="form-control" value="{{ transaction.amount }}" required>
+                <input
+                    type="number"
+                    name="amount"
+                    id="amount"
+                    class="form-control"
+                    value="{{ transaction.amount }}"
+                    step="any"
+                    required
+                >
             </div>
 
             <div class="form-footer">
-                <input class="btn btn-success" type="submit" value="Update Transaction">
-                <a class="btn btn-info" href="{{ url_for('main.get_transactions') }}">Go Back</a>
+                <input class="btn btn-success"
+                       type="submit"
+                       value="Update Transaction">
+                <a class="btn btn-info"
+                   href="{{ url_for('main.get_transactions') }}">
+                   Go Back
+                </a>
             </div>
         </form>
     </div>
